# smartrenamer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLOUD_STORAGE_GUIDE.md  CLOUD_STORAGE_IMPLEMENTATION_REPORT.md  CLOUD_STORAGE_QUICKREF.md  CODEQL_PERMISSIONS_FIX.md  COMMIT_MESSAGE.txt  CROSS_PLATFORM_PACKAGING_SUMMARY.md  DOCKER_COMPLETE_SUMMARY.md  DOCKER_DELIVERABLES.md  DOCKER_IMPLEMENTATION_REPORT.md  DOCKER_QUICKREF.md  DOCKER_QUICK_START.md  DOCKER_SUMMARY.md  DOCKER_TASK_COMPLETION.md  DOCKER_TASK_FINAL_REPORT.md  DOCKER_USAGE.md  DROP_NON_MAC_ASSETS_SUMMARY.md  Dockerfile  FIX_SUMMARY.md  GHCR_IMAGE_LOWERCASE_FIX.md  GITHUB_ACTIONS_UPGRADE.md  ICON_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MACOS_FIX_VALIDATION_REPORT.md  MACOS_ONLY_BUILD_REFACTOR.md  MACOS_ONLY_MERGE_SUMMARY.md  MACOS_ONLY_SPEC_SIMPLIFICATION.md  MACOS_SYMLINK_FIX_SUMMARY.md  MEDIA_LIBRARY_GUIDE.md  Makefile  NEXT_STEPS.md  PACKAGING_CHECKLIST.md  PACKAGING_GUIDE.md  PARSER_MATCHER_GUIDE.md  PROJECT_STATUS.md  (+36 more)
.github/: ICON_BUILD_PROCESS.md
assets/: README.md  icon.icns  smartrenamer.desktop
docs/: MACOS_PYINSTALLER_FIX.md  PERFORMANCE_OPTIMIZATION.md  WINDOWS_ENCODING_FIX.md  WINDOWS_UTF8_ENCODING_FIX.md
examples/: basic_usage.py  parser_and_matcher_example.py  renamer_example.py  scan_library_example.py  storage_example.py
i18n/: README.md  en_US.json  zh_CN.json
scripts/: build.py  check_compatibility.sh
tests/: __init__.py  conftest.py  test_config.py  test_file_utils.py  test_i18n_manager.py  test_library.py  test_matcher.py  test_models.py  (+8 more)
(+44 files in other folders)
